# pytests

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  project-structure.ignoreFolders  project_structure.text  pyproject.toml  pytest.ini  requirements.txt
celery/: Dockerfile.celery  entrypoint.sh
core/: pytest.ini  settings.py  urls.py
department/: models.py  urls.py
department/adapter/serializers/: department_serializer.py
department/adapter/views/: department_view.py
department/data/db/: department_repo_implementation.py
department/domain/entity/: department_entity.py
department/domain/repo/: department_repo.py
department/domain/usecase/department/: create_department_usecase.py  delete_department_usecase.py  get_specific_department_usecase.py  list_department_usecase.py  update_department_usecase.py
department/migrations/: 0001_initial.py  0002_alter_department_icon.py
department/tests/adapter/serializers/: test_serializers.py  test_views.py
department/tests/adapter/views/: test_views.py
department/tests/unit/: test_department_entities.py  test_department_repository.py  test_department_usecase.py  test_departments_views.py
docs/: project_structure_filtered.txt
utils/: response.py
